# nsdf-slac

./: .env.example  .gitignore  404.html  Anomaly detection.ipynb  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  ReadMe.md  Root Visualization.ipynb  channel_extract.cpp  compose.yaml  convert.py  dagger.json  dashboard.py  dashboards.json  data.npz  download.py  env.yml  idx.py  index.html  mkdocs.yml  requirements.txt  setup-conda.sh  signal1d.ipynb  slac.ipynb  slac.py  slacd.py  slacidx.py  svgs.py  testidx.py  transfer.py  uploaded_files.txt  utils.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: artifacts.yml  docs.yml  test.yml
CODE_OF_CONDUCT/: index.html
acknowledgment/: index.html
assets/tapes/: cli-download-multiple.tape  cli-download.tape  cli-ls.tape  cli-prefix.tape  cli-tutorial-download.tape  cli-tutorial-ls.tape
channels/: Makefile  README.md  idx.py  main  main.cpp  reader.py
citations/: index.html
cli/: cli.py  index.html
contributing/: index.html
dashboard/: Dockerfile  Makefile  README.md  compose.yaml  index.html  pyproject.toml  slac.py  utils.py
docs/: CODE_OF_CONDUCT.md  README.md  acknowledgment.md  citations.md  cli.md  contributing.md  dashboard.md  index.md  issues.md  library.md  plotting_tutorial.md
docs/stylesheets/: overrides.css
example/plotting/: README.md  main.py  pyproject.toml
idx/: 07180808_1558_F0001.idx  07180808_1558_F0002.idx  07180808_1558_F0002_metadata.txt  07180808_1558_F0003.idx  07180808_1558_F0004.idx  07180808_1558_F0005.idx  07180808_1558_F0006.idx
idx_lib/: idx_dark_matter.py  test_idx_dark_matter.py
issues/: index.html
metadata/: 07180808_1558_F0001.csv  07180808_1558_F0002.csv  07180808_1558_F0003.csv  07180808_1558_F0004.csv  07180808_1558_F0005.csv  07180808_1558_F0006.csv
midas/: ReadMe.md  __init__.py  callbacks.py  client.py  event.py  file_reader.py  frontend.py  structs.py
nsdf_dark_matter/: README.md  pyproject.toml
nsdf_dark_matter/src/tests/fixtures/idx/07180808_1558_F0001/: 07180808_1558_F0001.csv  07180808_1558_F0001.idx  07180808_1558_F0001.txt
nsdf_dark_matter_cli/: README.md  cli.py  pyproject.toml
nsdf_dark_matter_cli/src/nsdf_dark_matter_cli/: cli.py  download.py  r68_dataset.py  r76_dataset.py  r_dataset.csv
nsdf_dark_matter_cli/src/tests/fixtures/: filelist.txt  filelist_large.txt  ls_all_parameters_golden.txt  ls_lim_golden.txt  ls_prefix_golden.txt
plotting_tutorial/: index.html
processing/: Makefile  channel_extract.cpp  download.py  idx.py  upload.py
search/: search_index.json
(+6 files in other folders)
