[project]
name = "dashboard"
version = "0.1.0"
description = "NSDF Dark Matter Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "bokeh==3.2.2",
    "panel",
    "openvisuspy",
    "ipykernel",
    "python-dotenv",
    "OpenVisusNoGui==2.2.128",
    "boto3==1.35.99"
]
