[project]
name = "nsdf-dark-matter-cli"
version = "0.1.0"
description = "NSDF Dark Matter CLI"
readme = "README.md"
authors = [
    { name = "NSDF Team", email = "info@nationalsciencedatafabric.org" }
]
requires-python = ">=3.10"
dependencies = [
    "typer==0.16.0",
    "requests==2.32.4",
]

[project.scripts]
nsdf-cli = "nsdf_dark_matter_cli.cli:app"
