[project]
name = "nexus-tutorial-plotting-pulses"
version = "0.1.0"
description = "Plotting dark matter pulses tutorial with the NSDF software stack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nsdf-dark-matter-cli==0.3.1",
    "nsdf-dark-matter==0.3.0",
    "matplotlib"
]
